# ASR-Noun-Enhancement

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: assignment.md
notebooks/: notebook.ipynb
scripts/: main.py
src/data_processing/: eda.py  pipeline.py
src/evaluation/: compare.py  plots.py
