[project]
name = "asr-noun-enhancement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.5.0",
    "nltk>=3.9.1",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "datasets>=3.1.0",
    "sentencepiece>=0.2.0",
    "accelerate>=0.26.0",
    "matplotlib>=3.9.0",
    "spacy>=3.7.0",
]
